StatVsShoning/.ipynb_checkpoints/slurm-399423-checkpoint.out
  File "testStatistics.py", line 153
    print("Clauses " + str(nc) + " took " + str(start-time.time()))
    ^
IndentationError: unexpected indent
